# cyllene

./: .gitignore  110_0_jupyter_tutorial.ipynb  110_0_jupyter_tutorial.py  110_0_jupyter_tutorial_pure_docker.ipynb  110_0_jupyter_tutorialripynb  README.md  dockerfile  environment.yml  f_compare.py  f_define.py  f_functionclass.py  j_problem.py  p_problem.py  psucalc.py  pyproject.toml  setup.cfg
cyllene/: LICENSE  README.md  p_problem.py
cyllene.egg-info/: PKG-INFO  SOURCES.txt
cyllene/src/cyllene.egg-info/: SOURCES.txt  requires.txt  top_level.txt
cyllene/src/cyllene/MathFunctions/: math_cmds.py  math_compare.py  math_randomfunction.py
cyllene/src/cyllene/MathProblems/: problem_aux.py  problem_instantiator.py  problem_parametermultchoice.py  problem_substitution.py
src/cyllene/: __init__.py
src/cyllene.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cyllene/MathFunctions/: math_listform.py  math_plot.py  math_randomfunction.py  math_randomrational.py  math_rfunction.py  math_table.py
src/cyllene/MathProblems/: problem_basic.py  problem_handler.py  problem_instantiator.py  problem_parameter.py  problem_parametermultchoice.py
src/cyllene/ProblemParser/: parser_webassign.py  parser_webassign_new.py
src/cyllene/QTI/: problem_txtqti.py
src/cyllene/aux/: input_transform.py
src/cyllene/magics/: problem_magics.py
src/cyllene/user/: problem_cmds.py  problem_stack.py
src/cyllene/widgets/: ipyvuetify_multiplechoice.py  vue_problem_basic.py  vue_problem_parameter.py  widget_viewer.py  widgets_aux.py  widgets_problem_basic.py  widgets_problem_param.py
(+11 files in other folders)
