[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyllene"
version = "0.4.0"
description = "IPython package for math problem authoring"
readme = "README.md"
authors = [{ name = "Jan Reimann", email = "jan.reimann@psu.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "text2qti >= 0.5.0",
    "ipython",
    "ipywidgets >= 8.0.1",
    "sympy >= 1.10.1",
    "pyparsing >= 3.0.9",
    "ipyvuetify >= 1.8.2"
]
requires-python = ">=3.7"
