[metadata]
name = cyllene
version = 0.2
author = Jan Reimann
author_email = jan.reimann@psu.edu
license = BSD 3-Clause License
keywords = calculus, sympy
description = Python package to create calculus activties with Python in Jupyter notebooks
long_description = README.md
long_description_content_type = text/markdown
url = https://github.com/28left/calculuswithjupyter
project_urls =
    Bug Tracker = https://github.com/28left/calculuswithjupyter/issues

classifiers =
    Framework :: Jupyter
    Intended Audience :: Education
    License :: Free for non-commercial use
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Education

[options]
packages = cyllene
python_requires = >=3.5

# [options.packages.find]
# where = cyllene

install_requires =
  sympy
  numpy
  matplotlib
